# Shop

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup_pre_commit.sh  setup_test_server_commands.txt  start  uwsgi.ini
.github/workflows/: ci-cd.yml  test-env.example
abstract/: middleware.py  mixins.py  viewset.py
abstract/models/: __init__.py  base.py
apps/: urls.py
apps/cart/: factories.py  models.py  serializers.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_initial.py
apps/cart/tests/: test_models.py  test_serializers.py  test_views.py
apps/category/: factories.py  models.py  serializers.py  views.py
apps/category/migrations/: 0001_initial.py
apps/image/: factories.py  models.py  serializers.py  views.py
apps/image/migrations/: 0001_initial.py
apps/order/: factories.py  models.py  serializers.py  views.py
apps/order/migrations/: 0001_initial.py
apps/product/: factories.py  models.py  serializers.py  views.py
apps/product/migrations/: 0001_initial.py
apps/user/: models.py  serializers.py
apps/user/management/commands/: populate_db.py
apps/user/migrations/: 0002_alter_user_groups_alter_user_user_permissions.py
core/: celery.py  settings.py  urls.py  yasg.py
utils/: fields.py  password_validator.py  renderers.py  swagger_settings.py  value_parsers.py
