[project]
name = "shop"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad0n20",email = "vlad.onischuk1234@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
